// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropDownGroup Arrow down arrow should open the drop down 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div>
    something
  </div>
  <div
    aria-haspopup="listbox"
    class="sc-htpNat bEXorH"
    data-testid="test-dropContainer"
    label="Sort By:"
    placeholder=""
    tabindex="0"
  >
    <label
      class="dropdown--active dropdown--border sc-bdVaJa jOVSaQ"
    >
      <div
        class="dropdown--selected dropdown--border sc-ifAKCX dIQjbB"
      />
      <svg
        class="dropdown__icon--hide sc-bxivhb bfTkLM"
        fill="currentColor"
        height="12"
        viewBox="0 -1 15 7"
        width="12"
      >
        <path
          d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown--clicked sc-bwzfXH ewSIUN"
    >
      <div
        class="sc-EHOje hRvppO"
        role="listbox"
      >
        <span
          class="sc-bZQynM kkZNKr"
          data-testid="test-dropDownOptionOne"
          tabindex="-1"
          value="ValueOne"
        >
          Option One
        </span>
        <span
          class="sc-bZQynM kkZNKr"
          data-testid="test-dropDownOptionTwo"
          tabindex="-1"
          value="ValueTwo"
        >
          Second Option
        </span>
        <span
          class="sc-bZQynM kkZNKr"
          data-testid="test-dropDownOptionThree"
          tabindex="-1"
          value="ValueThree"
        >
          Option Three
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup Arrow key up should open the drop down 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div>
    something
  </div>
  <div
    aria-haspopup="listbox"
    class="sc-htpNat bEXorH"
    data-testid="test-dropContainer"
    label="Sort By:"
    placeholder=""
    tabindex="0"
  >
    <label
      class="dropdown--active dropdown--border sc-bdVaJa jOVSaQ"
    >
      <div
        class="dropdown--selected dropdown--border sc-ifAKCX dIQjbB"
      />
      <svg
        class="dropdown__icon--hide sc-bxivhb bfTkLM"
        fill="currentColor"
        height="12"
        viewBox="0 -1 15 7"
        width="12"
      >
        <path
          d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown--clicked sc-bwzfXH ewSIUN"
    >
      <div
        class="sc-EHOje hRvppO"
        role="listbox"
      >
        <span
          class="sc-bZQynM kkZNKr"
          data-testid="test-dropDownOptionOne"
          tabindex="-1"
          value="ValueOne"
        >
          Option One
        </span>
        <span
          class="sc-bZQynM kkZNKr"
          data-testid="test-dropDownOptionTwo"
          tabindex="-1"
          value="ValueTwo"
        >
          Second Option
        </span>
        <span
          class="sc-bZQynM kkZNKr"
          data-testid="test-dropDownOptionThree"
          tabindex="-1"
          value="ValueThree"
        >
          Option Three
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup Click outside should close the dropdown 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div>
    something
  </div>
  <div
    aria-haspopup="listbox"
    class="sc-htpNat bEXorH"
    data-testid="test-dropContainer"
    label="Sort By:"
    placeholder=""
    tabindex="0"
  >
    <label
      class="dropdown--border sc-bdVaJa jOVSaQ"
    >
      <div
        class="dropdown--selected dropdown--border sc-ifAKCX dIQjbB"
      />
      <svg
        class="sc-bxivhb bfTkLM"
        fill="currentColor"
        height="12"
        viewBox="0 -1 15 7"
        width="12"
      >
        <path
          d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
        />
      </svg>
    </label>
    <div
      class="dropdown__items sc-bwzfXH ewSIUN"
    >
      <div
        class="sc-EHOje hRvppO"
        role="listbox"
      >
        <span
          class="sc-bZQynM kkZNKr"
          data-testid="test-dropDownOptionOne"
          tabindex="-1"
          value="ValueOne"
        >
          Option One
        </span>
        <span
          class="sc-bZQynM kkZNKr"
          data-testid="test-dropDownOptionTwo"
          tabindex="-1"
          value="ValueTwo"
        >
          Second Option
        </span>
        <span
          class="sc-bZQynM kkZNKr"
          data-testid="test-dropDownOptionThree"
          tabindex="-1"
          value="ValueThree"
        >
          Option Three
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup Should open the drop down onClick 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div>
    something
  </div>
  <div
    aria-haspopup="listbox"
    class="sc-htpNat bEXorH"
    data-testid="test-dropContainer"
    label="Sort By:"
    placeholder=""
    tabindex="0"
  >
    <label
      class="dropdown--border sc-bdVaJa jOVSaQ"
    >
      <div
        class="dropdown--selected dropdown--border sc-ifAKCX dIQjbB"
      />
      <svg
        class="sc-bxivhb bfTkLM"
        fill="currentColor"
        height="12"
        viewBox="0 -1 15 7"
        width="12"
      >
        <path
          d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
        />
      </svg>
    </label>
    <div
      class="dropdown__items sc-bwzfXH ewSIUN"
    >
      <div
        class="sc-EHOje hRvppO"
        role="listbox"
      >
        <span
          class="sc-bZQynM kkZNKr"
          data-testid="test-dropDownOptionOne"
          tabindex="-1"
          value="ValueOne"
        >
          Option One
        </span>
        <span
          class="sc-bZQynM kkZNKr"
          data-testid="test-dropDownOptionTwo"
          tabindex="-1"
          value="ValueTwo"
        >
          Second Option
        </span>
        <span
          class="sc-bZQynM kkZNKr"
          data-testid="test-dropDownOptionThree"
          tabindex="-1"
          value="ValueThree"
        >
          Option Three
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup Should remove event listener when unmount 1`] = `""`;

exports[`DropDownGroup Space bar should select and close dropdown 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div>
    something
  </div>
  <div
    aria-haspopup="listbox"
    class="sc-htpNat bEXorH"
    data-testid="test-dropContainer"
    label="Sort By:"
    placeholder=""
    tabindex="0"
  >
    <label
      class="dropdown--border sc-bdVaJa jOVSaQ"
    >
      <div
        class="dropdown--selected dropdown--border sc-ifAKCX dIQjbB"
      >
        Option One
      </div>
      <svg
        class="sc-bxivhb bfTkLM"
        fill="currentColor"
        height="12"
        viewBox="0 -1 15 7"
        width="12"
      >
        <path
          d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
        />
      </svg>
    </label>
    <div
      class="dropdown__items sc-bwzfXH ewSIUN"
    >
      <div
        class="sc-EHOje hRvppO"
        role="listbox"
      >
        <span
          class="dropdown__selected sc-bZQynM kkZNKr"
          data-testid="test-dropDownOptionOne"
          tabindex="-1"
          value="ValueOne"
        >
          Option One
        </span>
        <span
          class="sc-bZQynM kkZNKr"
          data-testid="test-dropDownOptionTwo"
          tabindex="-1"
          value="ValueTwo"
        >
          Second Option
        </span>
        <span
          class="sc-bZQynM kkZNKr"
          data-testid="test-dropDownOptionThree"
          tabindex="-1"
          value="ValueThree"
        >
          Option Three
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup renders default input 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div>
    something
  </div>
  <div
    aria-haspopup="listbox"
    class="sc-htpNat bEXorH"
    data-testid="test-dropContainer"
    label="Sort By:"
    placeholder=""
    tabindex="0"
  >
    <label
      class="dropdown--border sc-bdVaJa jOVSaQ"
    >
      <div
        class="dropdown--selected dropdown--border sc-ifAKCX dIQjbB"
      />
      <svg
        class="sc-bxivhb bfTkLM"
        fill="currentColor"
        height="12"
        viewBox="0 -1 15 7"
        width="12"
      >
        <path
          d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
        />
      </svg>
    </label>
    <div
      class="dropdown__items sc-bwzfXH ewSIUN"
    >
      <div
        class="sc-EHOje hRvppO"
        role="listbox"
      >
        <span
          class="sc-bZQynM kkZNKr"
          data-testid="test-dropDownOptionOne"
          tabindex="-1"
          value="ValueOne"
        >
          Option One
        </span>
        <span
          class="sc-bZQynM kkZNKr"
          data-testid="test-dropDownOptionTwo"
          tabindex="-1"
          value="ValueTwo"
        >
          Second Option
        </span>
        <span
          class="sc-bZQynM kkZNKr"
          data-testid="test-dropDownOptionThree"
          tabindex="-1"
          value="ValueThree"
        >
          Option Three
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup renders variant 1 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div>
    something
  </div>
  <div
    aria-haspopup="listbox"
    class="sc-htpNat bEXorH"
    data-testid="test-dropContainer"
    label="Sort By:"
    placeholder="Select An Option"
    tabindex="0"
  >
    <label
      class="dropdown--no-border sc-bdVaJa jOVSaQ"
    >
      <div
        class="dropdown--selected dropdown--no-border sc-ifAKCX dIQjbB"
      >
        Sort By: null
      </div>
      <svg
        class="dropdown--no-border sc-bxivhb bfTkLM"
        fill="currentColor"
        height="12"
        viewBox="0 -1 15 7"
        width="12"
      >
        <path
          d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
        />
      </svg>
    </label>
    <div
      class="dropdown__items sc-bwzfXH ewSIUN"
    >
      <div
        class="sc-EHOje hRvppO"
        role="listbox"
      >
        <span
          class="sc-bZQynM kkZNKr"
          data-testid="test-dropDownOptionOne"
          tabindex="-1"
          value="ValueOne"
        >
          Option One
        </span>
        <span
          class="sc-bZQynM kkZNKr"
          data-testid="test-dropDownOptionTwo"
          tabindex="-1"
          value="ValueTwo"
        >
          Second Option
        </span>
        <span
          class="sc-bZQynM kkZNKr"
          data-testid="test-dropDownOptionThree"
          tabindex="-1"
          value="ValueThree"
        >
          Option Three
        </span>
      </div>
    </div>
  </div>
</div>
`;
